--- a/packages/vehicle-manufacture-manufacturing/client/app/views/dashboard/dashboard.less
+++ b/packages/vehicle-manufacture-manufacturing/client/app/views/dashboard/dashboard.less
@@ -2,6 +2,7 @@
 
 .bc-man-dashboard {
   width: 100%;
+  box-sizing: border-box;
   margin: 42px 52px;
 
   h1 {
@@ -35,30 +36,33 @@
     margin: 48px 0 30px 0;
   }
 
-  .bc-man-production {
-    margin-left: -10px;
-    display: flex;
-    align-items: flex-start;
-    height: 470px;
+  .report-section {
+    .left {
+      float: left;
+      width: ~"calc(100% - 305px)";
+      min-width: 400px;
+      margin-bottom: 25px;
+    }
+    .right {
+      float: right;
 
-    @keyframes slideInFromLeft {
-      0% {
-        width: 0;
+      .status {
+        margin-bottom: 15px!important;
+      }
 
-      }
-      100% {
-        width: 240px;
-      }
+
     }
 
     .card {
-      animation: 0.6s ease-out 0s 1 slideInFromLeft;
-      overflow: hidden;
-      margin-right: 20px;
 
-      .card-header {
+      .order-summary {
         display: flex;
         justify-content: space-between;
+
+        .status {
+          width: 100%!important;
+          margin-top: 25px;
+        }
       }
 
       h5 {
@@ -73,118 +77,171 @@
         margin: 8px 0;
       }
 
-      li {
-        padding: 1px 0;
-        display: flex;
-        justify-content: space-between;
-      }
-
       .swatch {
         background: red;
         width: 68px;
         height: 86px;
         border-radius: 5px;
+
+        &.orange {
+          background-image: linear-gradient(-180deg, #ffa047 0%, #d97122 100%);
+        }
+  
+        &.red {
+          background-image: linear-gradient(-180deg, #f5515f 0%, #9f031b 100%);
+        }
+  
+        &.purple {
+          background-image: linear-gradient(-134deg, #3023ae 0%, #c96dd8 100%);
+        }
+  
+        &.green {
+          background-image: linear-gradient(-180deg, #b4ed50 0%, #429321 100%);
+        }
+  
+        &.blue {
+          background-image: linear-gradient(-180deg, #51f5eb 0%, #03939f 100%);
+        }
+  
+        &.grape {
+          background-image: linear-gradient(-134deg, #ae2358 0%, #c96dd8 100%);
+        }
       }
 
-      .orange {
-        background-image: linear-gradient(-180deg, #ffa047 0%, #d97122 100%);
+      .status-green::before {
+        background: @green;
       }
 
-      .red {
-        background-image: linear-gradient(-180deg, #f5515f 0%, #9f031b 100%);
+      .status-red::before {
+        background: @red;
       }
 
-      .purple {
-        background-image: linear-gradient(-134deg, #3023ae 0%, #c96dd8 100%);
+      .status-yellow::before {
+        background: @yellow;
       }
 
-      .green {
-        background-image: linear-gradient(-180deg, #b4ed50 0%, #429321 100%);
+      .status::before {
+        content: '';
+        border-radius: 5px;
+        width: 10px;
+        height: 10px;
+        position: absolute;
+        margin-top: 5px;
+      }
+      .status {
+
+        width: 100%;
+        display: inline-block;
+
+        .field
+        {
+          margin-left: 35px;
+        }
+        .data
+        {
+          float: right;
+          opacity: 0.5;
+        }
       }
 
-      .blue {
-        background-image: linear-gradient(-180deg, #51f5eb 0%, #03939f 100%);
-      }
+      .conf-data {
 
-      .grape {
-        background-image: linear-gradient(-134deg, #ae2358 0%, #c96dd8 100%);
+        width: 100%;
+        display: inline-block;
+
+        .field {
+          text-transform: capitalize;
+        }
+
+        .data
+        {
+          float: right;
+          opacity: 0.5;
+        }
       }
     }
 
-    .card-manufacture {
-      height: 162px;
-      margin: 10px 0 0 0;
+    .card:not(:first-child)
+    {
+      margin-top: 15px;
+    }
 
-      .btn {
-        margin-top: 38px;
+    .not-shown
+    {
+      padding-top: 30px;
+      padding-bottom: 30px;
+    }
+
+    .bottom-holder
+    {
+      position: relative;
+      .card-secondary
+      {
+        position: relative;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        margin-top: 15px;
+        padding-top: 29px;
+        padding-bottom: 29px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: inline-block;
+        box-sizing: border-box;
+
+        button {
+          margin-top: 15px;
+          max-width: -moz-fit-content;
+          max-width: -webkit-fit-content;
+          max-width: fit-content;
+        }
       }
     }
 
-    .card-delivery {
-      height: 68px;
-      margin: 10px 0 0 0;
-    }
+    .big-card {
+      overflow: hidden;
+      margin-right: 20px;
+      width: ~"calc(100% - 50px)";
 
-    .status {
-      span {
-        margin-left: 35px;
+      .card-block
+      {
+        justify-content: flex-start;
+
+        &:last-of-type {
+          padding-bottom: 25px;
+        }
+
+        .status:nth-child(even){
+          margin-right: 50px;
+        }
+
+        .status {
+          width: ~'calc(50% - 30px)';
+        }
+
+        .column {
+          display: inline-flex;
+          flex-direction: column;
+          width: ~'calc(50% - 30px)';
+
+          &:nth-child(odd) {
+            margin-left: 50px;
+          }
+        }
       }
-
-      .date {
-        margin-left: 5px;
-      }
-    }
-
-    .status::before {
-      content: '';
-      border-radius: 5px;
-      width: 10px;
-      height: 10px;
-      position: absolute;
-      margin-top: 5px;
-    }
-
-    .status-green::before {
-      background: @green;
-    }
-
-    .status-yellow::before {
-      background: @yellow;
-    }
-
-    .status-red::before {
-      background: @red;
     }
   }
+}
 
-  .bc-man-overview {
-    h5 {
-      display: flex;
-      align-items: center;
+@media screen and (max-width: 810px) {
+  .report-section {
 
-      .btn {
-        margin: 0 5px;
-      }
-
-      .btn-secondary {
-        margin-right: 20px;
-      }
-
-      .btn:first-of-type {
-        margin-left: 40px;
-      }
+    .left {
+      width: 100%!important;
     }
 
-    .graphs {
-      display: flex;
-
-      img {
-        margin: -20px 0 0 -40px;
-      }
-
-      img:first-of-type {
-        margin-left: -30px;
-      }
+    .right {
+      display: none;
     }
   }
 }
